tdf#112732 sw: fix conditions in SwContentTree::ExecCommand()

It has to be checked first that it's a CTYPE_CNT because otherwise
it's not a SwOutlineContent.

The assertion also didn't match the actual requirement.

Change-Id: I7fc3a6410f5de1e6b4c18965fff9bd9700562ed1
(cherry picked from commit 8b2619177c16058ae9994d5e39f04a813bacd061)